After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 744983 - some m4v files fail to preview when trying to import, after import, they seem to prevent scrubbing
some m4v files fail to preview when trying to import, after import, they seem...
Status: RESOLVED FIXED
Product: pitivi
Classification: Other
Component: Media library
Git
Other Linux
: Normal normal
: Git
Assigned To: Pitivi maintainers
Pitivi maintainers
Depends on:
Blocks:
 
 
Reported: 2015-02-22 19:57 UTC by Bassam Kurdali
Modified: 2015-02-23 19:05 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
qtdemux: All segment resulting from a seek should have the same seqnum (890 bytes, patch)
2015-02-23 19:04 UTC, Thibault Saunier
none Details | Review

Description Bassam Kurdali 2015-02-22 19:57:14 UTC
when trying to import the following files
http://urchn.org/pitivi/samples/fly.m4v
and
http://urchn.org/pitivi/samples/hop.m4v

I get the following errors, and the preview pane in the 'select one or more files' dialog does not show a preview:

** (pitivi:5337): CRITICAL **: gst_video_info_from_caps: assertion 'gst_caps_is_fixed (caps)' failed
0:00:14.549058821  5337 0x7f124c045f20 ERROR                  libav gstavviddec.c:1059:gst_ffmpegviddec_negotiate:<avdec_h264-0> negotiation failed

after this, I can still import the files into the project, drag them onto the timeline, etc, but I get some additional errors, either during the putting on the timeline, or during scrubbing the timeline:

ERROR 14:54:44 pipeline             _asyncDoneNotReceivedCb: we didn't get async done, this is a bug (pitivi/utils/pipeline.py:404)
ERROR 14:54:44 pipeline             _recover: Pipeline error detected during playback, resetting -- num tries: 0 (pitivi/utils/pipeline.py:529)
ERROR 14:54:48 pipeline             _asyncDoneNotReceivedCb: we didn't get async done, this is a bug (pitivi/utils/pipeline.py:404)
ERROR 14:54:48 pipeline             _recover: Pipeline error detected during playback, resetting -- num tries: 0 (pitivi/utils/pipeline.py:529)
0:07:56.362160961  5337 0x7f1284008630 ERROR             aggregator gstaggregator.c:1376:gst_aggregator_event_forward_func:<smart-mixer-mixer:sink_5> Event seek event: 0x7f1230017630, time 99:99:99.999999999, seq-num 8295, GstEventSeek, rate=(double)1, format=(GstFormat)GST_FORMAT_TIME, flags=(GstSeekFlags)GST_SEEK_FLAG_FLUSH+GST_SEEK_FLAG_ACCURATE, cur-type=(GstSeekType)GST_SEEK_TYPE_SET, cur=(gint64)2098864194, stop-type=(GstSeekType)GST_SEEK_TYPE_SET, stop=(gint64)4167000000; failed
0:07:56.362387014  5337 0x7f1284008630 ERROR             aggregator gstaggregator.c:1393:gst_aggregator_event_forward_func:<smart-mixer-mixer:sink_5> Query seeking FAILED

and eventually/rapidly, pitivi will 'lock up' in that I become unable to scrub the timeline anymore
Comment 1 Bassam Kurdali 2015-02-22 20:00:37 UTC
btw, I'm building pitivi from git on fedora linux 21, using the pitivi-git-environment.sh script.
Comment 2 Thibault Saunier 2015-02-23 19:04:33 UTC
Created attachment 297702 [details] [review]
qtdemux: All segment resulting from a seek should have the same seqnum
Comment 3 Thibault Saunier 2015-02-23 19:05:39 UTC
Attachment 297702 [details] pushed as fa08706 - qtdemux: All segment resulting from a seek should have the same seqnum