qtdemux: All segment resulting from a seek should have the same seqnum

https://bugzilla.gnome.org/show_bug.cgi?id=744983